# Grapics_OpenGL

./: CMakeLists.txt  run.sh
dependencies/GLAD/: CMakeLists.txt
src/: engine.cpp  engine.h  main.cpp
